setup general modules

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DeliveryTracking",
+  "name": "delivery-tracking",
   "version": "1.0.0",
   "description": "A Delivery Tracking Service",
   "main": "index.js",
