--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Joshua Ajayi-Majebi",
   "license": "ISC",
   "devDependencies": {
+    "faker": "^6.6.6",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
@@ -24,6 +25,7 @@
     "bunyan": "^1.8.15",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.2.7"
   }
 }
