--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "delivery-tracking",
   "version": "1.0.0",
   "description": "A Delivery Tracking Service",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joshy24/delivery-tracking.git"
+  },
   "main": "start.js",
   "scripts": {
     "test": "jest --watch --detectOpenHandles",
